# cyclone

./: .gitignore  CHANGELOG.md  README.md  cyclone.cabal  pattie.cabal
detections/: discord-musicbot.yaml  musicium.yaml
src/: Main.hs
src/Cyclone/: Helper.hs
src/Cyclone/Parsing/: DSL.hs  Data.hs  Parser.hs  Token.hs
src/Cyclone/Provider/: Discord.hs  DiscordCommands.hs  YAML.hs
src/Pattie/Parsing/: DSL.hs  Data.hs  Parser.hs
test/Cyclone/: DSLSpec.hs  ParserSpec.hs  SpecHelper.hs  YAMLSpec.hs
test/Pattie/: DSLSpec.hs  ParserSpec.hs  SpecHelper.hs
test/fixtures/detections/: testDetection.yaml
