cabal-version:      3.4
name:               cyclone
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xetera
maintainer:         xetera@top.gg

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-extensions:
    OverloadedStrings,
    LambdaCase,
    NamedFieldPuns
  build-depends:
    base ^>=4.14.2.0,
    megaparsec ^>= 9.1.0,
    text ^>= 1.2.5.0

executable cyclone
  import: shared-properties
  main-is:          Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules: Cyclone.Parsing.Data, Cyclone.Parsing.DSL, Cyclone.Parsing.Parser
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall

test-suite spec
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules: Cyclone.SpecHelper, Cyclone.ParserSpec
  build-depends: hspec >= 2.7, hspec-discover >= 2.7
  hs-source-dirs: src, test
  ghc-options:
    -O0
