cabal-version:      2.4
name:               pattie
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xetera
maintainer:         xetera@top.gg

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pattie
    main-is:          Main.hs
    default-extensions: OverloadedStrings, LambdaCase, NamedFieldPuns, RecordPuns

    -- Modules included in this executable, other than Main.
    other-modules: Pattie.Parsing.Data, Pattie.Parsing.DSL, Pattie.Parsing.Parser

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0, megaparsec ^>= 9.1.0, text ^>= 1.2.5.0
    hs-source-dirs:   src
    default-language: Haskell2010

flag test
  test-is: Test
  other-modules: Pattie.Parser.DSL.Test
  build-depends: QuickCheck, HUnit
  hs-source-dirs: src, tests
